--- a/package.json
+++ b/package.json
@@ -7,22 +7,43 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "local": "cross-env NODE_ENV=local concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:staged": "lint-staged",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier --check **/*.js",
+    "prettier:fix": "prettier --write **/*.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Node",
+    "TypeScript",
+    "Boilerplate"
+  ],
+  "author": "2Toad, LLC",
   "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^17.0.23",
-    "concurrently": "^7.1.0",
-    "cross-env": "^7.0.3",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.6.3"
-  },
   "dependencies": {
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
     "winston": "^3.7.2",
     "winston-slack-webhook-transport": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "concurrently": "^7.1.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.3",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-security": "^1.4.0",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.3"
   }
 }
