--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "local": "cross-env NODE_ENV=local concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "local": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "test": "jest -i --colors --verbose --detectOpenHandles",
+    "test:watch": "jest -i --watchAll",
+    "test:coverage": "jest -i --coverage",
     "lint": "eslint .",
     "lint:staged": "lint-staged",
     "lint:fix": "eslint . --fix",
-    "prettier": "prettier --check **/*.js",
-    "prettier:fix": "prettier --write **/*.js"
+    "prettier": "prettier --check **/*.ts",
+    "prettier:fix": "prettier --write **/*.ts"
   },
   "keywords": [
     "Node",
@@ -28,6 +30,7 @@
     "winston-slack-webhook-transport": "^2.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
@@ -42,8 +45,11 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
 }
