--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "test": "jest -i --colors --verbose --detectOpenHandles",
     "test:watch": "jest -i --watchAll",
     "test:coverage": "jest -i --coverage",
-    "lint": "eslint .",
-    "lint:staged": "lint-staged",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --cache --fix",
     "prettier": "prettier --check **/*.ts",
-    "prettier:fix": "prettier --write **/*.ts"
+    "prettier:fix": "prettier --write **/*.ts",
+    "prepare": "husky install"
   },
   "keywords": [
     "Node",
@@ -44,6 +44,7 @@
     "eslint-plugin-jest": "^26.1.3",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-security": "^1.4.0",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
