--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Opinionated boilerplate for a Node.js TypeScript app",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npx tsc",
+    "clean": "npx rimraf dist",
+    "build": "npm run clean && npx tsc",
     "start": "node dist/index.js",
     "local": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "test": "jest -i --colors --verbose --detectOpenHandles",
@@ -36,7 +37,6 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "concurrently": "^7.1.0",
-    "cross-env": "^7.0.3",
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.2.0",
@@ -50,6 +50,7 @@
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
